--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         }
         
         .contanier {
-            margin: 7rem;
+            margin: 5rem;
             display: flex;
             justify-content: center;
             gap: 2rem;
@@ -188,7 +188,7 @@
         <!-- leftbox for logo -->
         <div class="navbar__logo">
             <img src="img/ONKAR.png" srcset="">
-            <h2>Mahesh Fitness</h2>
+            <h2>Pune Fitness</h2>
         </div>
         </div>
 
